[tool.poetry]
name = "transaction-fraud-analysis"
version = "0.1.0"
description = "Transaction dataset analysis for ITMO MS entry competition"
authors = ["Said Kamalov <s.kamalovwork@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
pandas = "^2.3.1"
pyarrow = "^21.0.0"
plotly = "^6.2.0"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
